Regression: Multires levels not visible when entering sculpt mode #101116

Closed
opened 2022-09-16 10:40:38 +02:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-16 07:27, hash: 48d7ff68f0
Worked: 3.4.0 Alpha, branch: master, commit date: 2022-09-14 06:18, hash: 39c341bf4a

Caused by ee23f0f3fb

Short description of error
When entering sculpt mode the subdivision levels will not be visible. Instead you are sculpting on the base level 0 mesh.
Toggling the modifier or swicthing levels will fix the issue, but upon reentering sculpt mode it will happen again.

Exact steps for others to reproduce the error

  • Add a cube
  • Add a multires modifier and subdivide 4 times
  • Enter sculpt mode
**System Information** Operating system: Linux-5.15.0-47-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.85.02 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-09-16 07:27, hash: `48d7ff68f0` Worked: 3.4.0 Alpha, branch: master, commit date: 2022-09-14 06:18, hash: `39c341bf4a` Caused by ee23f0f3fb **Short description of error** When entering sculpt mode the subdivision levels will not be visible. Instead you are sculpting on the base level 0 mesh. Toggling the modifier or swicthing levels will fix the issue, but upon reentering sculpt mode it will happen again. **Exact steps for others to reproduce the error** - Add a cube - Add a multires modifier and subdivide 4 times - Enter sculpt mode
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscribers: @HooglyBoogly, @lichtwerk

Added subscribers: @HooglyBoogly, @lichtwerk
Member

Caused by ee23f0f3fb
CC @HooglyBoogly

Caused by ee23f0f3fb CC @HooglyBoogly
Philipp Oeser changed title from Multires levels not visible when entering sculpt mode to Regression: Multires levels not visible when entering sculpt mode 2022-09-16 14:22:45 +02:00
Hans Goudey self-assigned this 2022-09-16 14:31:25 +02:00

Added subscriber: @TheRedWaxPolice

Added subscriber: @TheRedWaxPolice

This issue was referenced by 8fdaf2bddc

This issue was referenced by 8fdaf2bddccf7cf1469733c05bad08d530fcd37c
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101116
No description provided.